# Qt

LED_RPI/blink_led/: CMakeLists.txt  gpio_27.cpp  gpio_27.h  ledcontroller.cpp  ledcontroller.h  main.cpp
LED_RPI/blink_led/qml/: Main.qml
Task1_gallery/: README.md
Task1_gallery/gallery/: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
WeatherApp/: README.md
WeatherApp/weatherapp/: CMakeLists.txt  Main.qml  WeatherAPI.cpp  WeatherAPI.h  main.cpp
task2.1_calc/calc/: Main.qml
task2_calc/calc/: CMakeLists.txt
task3_NetworkManager/NetworkManager/: BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Main.qml  WifiManager.cpp  WifiManager.h  main.cpp
